chore: scripts to commit og and index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,154 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-v4</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Daniele Tortora | Senior Software Engineer | Frontend & Full-Stack | AI Focused</title>
+    <meta name="title" content="Daniele Tortora | Senior Software Engineer | Frontend & Full-Stack | AI Focused" />
+    <meta name="description" content="Senior Software Engineer with 8+ years building production applications with React, TypeScript, Next.js, Vue, Node.js. Specializing in AI integration, design systems, and scalable architectures. Based in Zürich, Switzerland." />
+    <meta name="author" content="Daniele Tortora" />
+    <meta name="keywords" content="Daniele Tortora, floroz, Senior Software Engineer, Frontend Engineer, Full Stack Developer, React Developer, TypeScript, Vue.js, Node.js, AI Integration, Design Systems, Zurich, Switzerland" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.danieletortora.com" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#1a1a2e" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.danieletortora.com" />
+    <meta property="og:title" content="Daniele Tortora | Senior Software Engineer" />
+    <meta property="og:description" content="Senior Software Engineer with 8+ years building React, TypeScript, Next.js, Vue, Node.js applications and AI-powered solutions." />
+    <meta property="og:image" content="https://www.danieletortora.com/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Daniele Tortora - Senior Software Engineer Portfolio" />
+    <meta property="og:site_name" content="Daniele Tortora - Portfolio" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.danieletortora.com" />
+    <meta name="twitter:title" content="Daniele Tortora | Senior Software Engineer" />
+    <meta name="twitter:description" content="Senior Software Engineer with 8+ years building React, TypeScript, Next.js, Vue, Node.js applications and AI-powered solutions." />
+    <meta name="twitter:image" content="https://www.danieletortora.com/og-image.png" />
+    <meta name="twitter:image:alt" content="Daniele Tortora - Senior Software Engineer Portfolio" />
+    <meta name="twitter:site" content="@floroz87" />
+    <meta name="twitter:creator" content="@floroz87" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google" content="notranslate" />
+    <meta name="format-detection" content="telephone=no" />
+
+    <!-- Geo Tags -->
+    <meta name="geo.region" content="CH-ZH" />
+    <meta name="geo.placename" content="Zürich" />
+    <meta name="geo.position" content="47.3769;8.5417" />
+    <meta name="ICBM" content="47.3769, 8.5417" />
+
+    <!-- Structured Data - Person Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Daniele Tortora",
+      "jobTitle": "Senior Software Engineer",
+      "description": "Senior Software Engineer with 8+ years of experience specializing in React, TypeScript, Vue.js, Node.js, and AI integration. Currently at Snyk building AI-powered security features.",
+      "url": "https://www.danieletortora.com",
+      "email": "danieletortora.contact@gmail.com",
+      "image": "https://www.danieletortora.com/og-image.png",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Zürich",
+        "addressRegion": "ZH",
+        "addressCountry": "CH"
+      },
+      "sameAs": [
+        "https://github.com/floroz",
+        "https://www.linkedin.com/in/danieletortora/",
+        "https://twitter.com/floroz87"
+      ],
+      "knowsAbout": [
+        "React",
+        "Vue.js",
+        "Next.js",
+        "Nuxt",
+        "TypeScript",
+        "Node.js",
+        "Go",
+        "Express.js",
+        "GraphQL",
+        "AWS",
+        "GCP",
+        "Kubernetes",
+        "AI Integration",
+        "Design Systems"
+      ],
+      "alumniOf": {
+        "@type": "EducationalOrganization",
+        "name": "Università degli Studi di Napoli Federico II"
+      },
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Snyk",
+        "url": "https://snyk.io"
+      }
+    }
+    </script>
+
+    <!-- Structured Data - WebSite Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Daniele Tortora - Portfolio",
+      "url": "https://www.danieletortora.com",
+      "description": "Interactive portfolio of Daniele Tortora, Senior Software Engineer specializing in React, TypeScript, and AI integration.",
+      "author": {
+        "@type": "Person",
+        "name": "Daniele Tortora"
+      }
+    }
+    </script>
+
+    <!-- Preconnect to external domains for performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
+    <!-- Noscript fallback for SEO crawlers -->
+    <noscript>
+      <div style="padding: 20px; font-family: system-ui, sans-serif; max-width: 800px; margin: 0 auto;">
+        <h1>Daniele Tortora - Senior Software Engineer</h1>
+        <p>Senior Software Engineer with 8+ years building React, TypeScript, Next.js, Vue, Node.js applications and AI-powered solutions.</p>
+        <h2>About</h2>
+        <p>As a software engineer with over 8 years of experience, I've built my career on a core belief: that the most powerful systems are defined by their human experience.</p>
+        <h2>Experience</h2>
+        <ul>
+          <li><strong>Snyk</strong> - Full Stack Engineer (May 2024 - Present)</li>
+          <li><strong>Frontiers</strong> - Frontend Tech Lead (Feb 2023 - May 2024)</li>
+          <li><strong>Meta (Facebook)</strong> - Frontend Engineer (Jun 2022 - Feb 2023)</li>
+          <li><strong>Tundra</strong> - Senior Frontend Engineer (Nov 2021 - Jun 2022)</li>
+          <li><strong>Tray.ai</strong> - Senior Frontend Engineer (Jan 2021 - Oct 2021)</li>
+        </ul>
+        <h2>Skills</h2>
+        <p>React, Vue.js, TypeScript, Node.js, Go, Kubernetes, AWS, GCP, AI Integration, Design Systems</p>
+        <h2>Contact</h2>
+        <ul>
+          <li>Email: <a href="mailto:danieletortora.contact@gmail.com">danieletortora.contact@gmail.com</a></li>
+          <li>GitHub: <a href="https://github.com/floroz">github.com/floroz</a></li>
+          <li>LinkedIn: <a href="https://www.linkedin.com/in/danieletortora/">linkedin.com/in/danieletortora</a></li>
+        </ul>
+      </div>
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
