--- a/index.html
+++ b/index.html
@@ -152,5 +152,6 @@
     </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e972d1f56247451bb0722174416c1ca7"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
