feat: win95 mode for game and improved terminal experience

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.danieletortora.com" />
     <meta property="og:title" content="Daniele Tortora | Senior Software Engineer" />
-    <meta property="og:description" content="Senior Software Engineer with 8+ years building React, TypeScript, Next.js, Vue, Node.js applications and AI-powered solutions." />
+    <meta property="og:description" content="Senior Software Engineer with 10 years of experience building web applications in React, TypeScript, Golang, Next.js, Vue, Node.js. Currently focused on AI-powered solutions." />
     <meta property="og:image" content="https://www.danieletortora.com/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -37,7 +37,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://www.danieletortora.com" />
     <meta name="twitter:title" content="Daniele Tortora | Senior Software Engineer" />
-    <meta name="twitter:description" content="Senior Software Engineer with 8+ years building React, TypeScript, Next.js, Vue, Node.js applications and AI-powered solutions." />
+    <meta name="twitter:description" content="Senior Software Engineer with 10 years of experience building web applications in React, TypeScript, Golang, Next.js, Vue, Node.js. Currently focused on AI-powered solutions." />
     <meta name="twitter:image" content="https://www.danieletortora.com/og-image.png" />
     <meta name="twitter:image:alt" content="Daniele Tortora - Senior Software Engineer Portfolio" />
     <meta name="twitter:site" content="@floroz87" />
@@ -129,9 +129,9 @@
     <noscript>
       <div style="padding: 20px; font-family: system-ui, sans-serif; max-width: 800px; margin: 0 auto;">
         <h1>Daniele Tortora - Senior Software Engineer</h1>
-        <p>Senior Software Engineer with 8+ years building React, TypeScript, Next.js, Vue, Node.js applications and AI-powered solutions.</p>
+        <p>Senior Software Engineer with 10 years of experience building web applications in React, TypeScript, Golang, Next.js, Vue, Node.js. Currently focused on AI-powered solutions.</p>
         <h2>About</h2>
-        <p>As a software engineer with over 8 years of experience, I've built my career on a core belief: that the most powerful systems are defined by their human experience.</p>
+        <p>As a software engineer with over 9 years of experience, I've built my career on a core belief: that the most powerful systems are defined by their human experience.</p>
         <h2>Experience</h2>
         <ul>
           <li><strong>Snyk</strong> - Full Stack Engineer (May 2024 - Present)</li>
