feat: new game screens

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- Primary Meta Tags -->
     <title>Daniele Tortora | Senior Software Engineer | Frontend & Full-Stack | AI Focused</title>
     <meta name="title" content="Daniele Tortora | Senior Software Engineer | Frontend & Full-Stack | AI Focused" />
-    <meta name="description" content="Senior Software Engineer with 8+ years building production applications with React, TypeScript, Next.js, Vue, Node.js. Specializing in AI integration, design systems, and scalable architectures. Based in Zürich, Switzerland." />
+    <meta name="description" content="Senior Software Engineer with 10 years building production applications with React, TypeScript, Next.js, Vue, Node.js. Specializing in AI integration, design systems, and scalable architectures. Based in Switzerland." />
     <meta name="author" content="Daniele Tortora" />
-    <meta name="keywords" content="Daniele Tortora, floroz, Senior Software Engineer, Frontend Engineer, Full Stack Developer, React Developer, TypeScript, Vue.js, Node.js, AI Integration, Design Systems, Zurich, Switzerland" />
+    <meta name="keywords" content="Daniele Tortora, floroz, Senior Software Engineer, Frontend Engineer, Full Stack Developer, React Developer, TypeScript, Vue.js, Node.js, AI Integration, Design Systems, Switzerland" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.danieletortora.com" />
@@ -62,7 +62,7 @@
       "@type": "Person",
       "name": "Daniele Tortora",
       "jobTitle": "Senior Software Engineer",
-      "description": "Senior Software Engineer with 8+ years of experience specializing in React, TypeScript, Vue.js, Node.js, and AI integration. Currently at Snyk building AI-powered security features.",
+      "description": "Senior Software Engineer with 10 years of experience specializing in React, TypeScript, Vue.js, Node.js, and AI integration. Currently at Snyk building AI-powered security features.",
       "url": "https://www.danieletortora.com",
       "email": "danieletortora.contact@gmail.com",
       "image": "https://www.danieletortora.com/og-image.png",
@@ -79,10 +79,10 @@
       ],
       "knowsAbout": [
         "React",
+        "TypeScript",
         "Vue.js",
         "Next.js",
         "Nuxt",
-        "TypeScript",
         "Node.js",
         "Go",
         "Express.js",
@@ -131,7 +131,7 @@
         <h1>Daniele Tortora - Senior Software Engineer</h1>
         <p>Senior Software Engineer with 10 years of experience building web applications in React, TypeScript, Golang, Next.js, Vue, Node.js. Currently focused on AI-powered solutions.</p>
         <h2>About</h2>
-        <p>As a software engineer with over 9 years of experience, I've built my career on a core belief: that the most powerful systems are defined by their human experience.</p>
+        <p>As a software engineer with 10 years of experience, I've built my career on a core belief: that the most powerful systems are defined by their human experience.</p>
         <h2>Experience</h2>
         <ul>
           <li><strong>Snyk</strong> - Full Stack Engineer (May 2024 - Present)</li>
@@ -139,6 +139,7 @@
           <li><strong>Meta (Facebook)</strong> - Frontend Engineer (Jun 2022 - Feb 2023)</li>
           <li><strong>Tundra</strong> - Senior Frontend Engineer (Nov 2021 - Jun 2022)</li>
           <li><strong>Tray.ai</strong> - Senior Frontend Engineer (Jan 2021 - Oct 2021)</li>
+          <li><strong>Past Frontend Roles</strong> - Frontend Engineer / Software Engineer (Sep 2016 - Dec 2020)</li>
         </ul>
         <h2>Skills</h2>
         <p>React, Vue.js, TypeScript, Node.js, Go, Kubernetes, AWS, GCP, AI Integration, Design Systems</p>
